# stone-lang

./: CMakeLists.txt  README.md
include/headers/: expression.hpp  parser.hpp  scope.hpp  token.hpp  token_evals.hpp  types.hpp
src/: expression.cpp  main.cpp  parser.cpp  scope.cpp  token.cpp  token_evals.cpp
test-code/: simple.st  test.st
